installments/pihole/dns-proxy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dns-proxy
spec:
  containers:
    - name: proxy-udp
      image: k8s.gcr.io/proxy-to-service:v2
      args: [ "udp", "53", "kube-dns.default", "1" ]
      ports:
        - name: udp
          protocol: UDP
          containerPort: 53
          hostPort: 53
    - name: proxy-tcp
      image: k8s.gcr.io/proxy-to-service:v2
      args: [ "tcp", "53", "kube-dns.default" ]
      ports:
        - name: tcp
          protocol: TCP
          containerPort: 53
          hostPort: 53
