installments/pihole/30-pihole-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: pihole-service
  namespace: home-assistant
spec:
  selector:
    app: pihole
  ports:
    - protocol: TCP
      port: 80
      targetPort: 16349
      name: pihole
