installments/pihole/40-pihole-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
spec:
  rules:
    - host: pihole.cluster
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-service
                port:
                  number: 80
