installments/pihole/pihole-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: pihole-daemon
  namespace: home-assistant
  labels:
    app: pihole
spec:
  template:
    metadata:
      labels:
        app: pihole
        name: pihole
    spec:
      containers:
        - name: pihole
          image: pihole/pihole:latest
          ports:
            - name: dns-udp
              containerPort: 53
              hostPort: 53
            - name: admin
              containerPort: 80
          volumeMounts:
            - mountPath: /etc/pihole
              name: config
            - mountPath: /etc/dnsmasq.d/02-custom.conf
              name: custom-dnsmasq
              subPath: 02-custom.conf
      volumes:
        - name: config
        - configMap:
            defaultMode: 420
            name: pihole-custom-dnsmasq
          name: custom-dnsmasq
  selector:
    matchLabels:
      app: pihole
      name: pihole
---
kind: Service
apiVersion: v1
metadata:
  name: pihole-service
  namespace: home-assistant
spec:
  selector:
    app: pihole
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: pihole
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pihole-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: pi.hole
      http:
        paths:
          - path: /
            backend:
              serviceName: pihole-service
              servicePort: 80
