installments/pihole/pihole-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole-deployment
  namespace: home-assistant
  labels:
    app: pihole
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pihole
        name: pihole
    spec:
      hostNetwork: true
      containers:
        - name: pihole
          image: pihole/pihole:4.3.1-4
          resources:
            requests:
              memory: 31Mi
            limits:
              memory: 75Mi
          ports:
            - name: dns
              containerPort: 53
              hostPort: 53
            - name: admin
              containerPort: 16349
          volumeMounts:
            - mountPath: /etc/pihole
              name: config
            - mountPath: /etc/dnsmasq.d/02-custom.conf
              name: pihole-config
              subPath: 02-custom.conf
            - mountPath: /etc/pihole/whitelist.txt
              name: pihole-config
              subPath: whitelist.txt
          livenessProbe:
            httpGet:
              path: /admin/index.php
              port: 16349
            initialDelaySeconds: 60
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /admin/index.php
              port: 16349
            initialDelaySeconds: 25
            periodSeconds: 5
      volumes:
        - name: config
        - configMap:
            defaultMode: 420
            name: pihole-configmap
          name: pihole-config
  selector:
    matchLabels:
      app: pihole
      name: pihole
---
kind: Service
apiVersion: v1
metadata:
  name: pihole-service
  namespace: home-assistant
spec:
  selector:
    app: pihole
  ports:
    - protocol: TCP
      port: 80
      targetPort: admin
      name: pihole
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pihole-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: pihole.cluster
      http:
        paths:
          - path: /
            backend:
              serviceName: pihole-service
              servicePort: 80
